FIxed overflow issue

--- a/src/stylesheets/crosswords/_layout.scss
+++ b/src/stylesheets/crosswords/_layout.scss
@@ -74,8 +74,7 @@
     }
 
     @include mq(tablet) {
-        & .crossword__clues {
-            position: relative;
+        & .crossword__clues--wrapper {
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch;
         }
